# hermes-maton-tap

./: .gitignore  LICENSE  MANIFEST.in  README.md  maton_http.py  pyproject.toml
.github/workflows/: ci.yml
docs/: release-checklist.md
docs/plans/: 2026-06-05-maton-parity-plan.md
skills/maton-api-gateway/: SKILL.md
skills/maton-api-gateway/references/: apps-and-routes.md  google-docs.md
skills/maton-api-gateway/scripts/: maton_api_gateway.py
skills/maton-connections/: SKILL.md
skills/maton-connections/scripts/: maton_connections.py
skills/maton-gmail/: SKILL.md
skills/maton-gmail/scripts/: maton_gmail.py
skills/maton-google-calendar/: SKILL.md
skills/maton-google-calendar/scripts/: maton_calendar.py
skills/maton-google-docs/: SKILL.md
skills/maton-google-docs/scripts/: maton_google_docs.py
skills/maton-google-drive/: SKILL.md
skills/maton-google-drive/scripts/: maton_drive.py
skills/maton-google-meet/: SKILL.md
skills/maton-google-meet/scripts/: maton_google_meet.py
tests/: conftest.py  test_maton_api_gateway.py  test_maton_calendar.py  test_maton_connections.py  test_maton_drive.py  test_maton_gmail.py  test_maton_google_docs.py  test_maton_google_meet.py  test_maton_http.py
